@@ -34,25 +34,6 @@
  * only if the new code is made subject to such option by the copyright
  * holder.
  */
-/*
- * The contents of this file are subject to the terms
- * of the Common Development and Distribution License
- * (the "License").  You may not use this file except
- * in compliance with the License.
- *
- * You can obtain a copy of the license at
- * http://www.opensource.org/licenses/cddl1.php
- * See the License for the specific language governing
- * permissions and limitations under the License.
- */
-
-/*
- * AbstractSubResourceLocator.java
- *
- * Created on October 5, 2007, 1:45 PM
- *
- */
-
 package com.sun.jersey.api.model;
 
 import java.lang.reflect.Method;
@@ -62,20 +43,19 @@ import java.util.List;
 /**
  * Abstraction for a sub resource locator
  */
-public class AbstractSubResourceLocator implements UriPathAnnotated, Parameterized, AbstractModelComponent {
+public class AbstractSubResourceLocator extends AbstractMethod
+        implements UriPathAnnotated, Parameterized, AbstractModelComponent {
     
     private UriPathValue uriPath;
-    private Method method;
+    
     private List<Parameter> parameters;
     
     /**
      * Creates a new instance of AbstractSubResourceLocator
      */
     public AbstractSubResourceLocator(Method method, UriPathValue uriPath) {
+        super(method);
         
-        assert null != method;
-        
-        this.method = method;
         this.uriPath =  uriPath;
         this.parameters = new ArrayList<Parameter>();
     }
@@ -84,10 +64,6 @@ public class AbstractSubResourceLocator implements UriPathAnnotated, Parameteriz
         return uriPath;
     }
     
-    public Method getMethod() {
-        return method;
-    }
-
     public List<Parameter> getParameters() {
         return parameters;
     }
